agrego validaciones front

--- a/sitio/public/stylesheets/styles.css
+++ b/sitio/public/stylesheets/styles.css
@@ -12,4 +12,5 @@
 @import url('profile.css');
 @import url('list.css');
 @import url('productos.css');
+@import url('nosotros.css');
 @import url('contacto.css');
