--- a/sitio/views/addProducts.ejs
+++ b/sitio/views/addProducts.ejs
@@ -10,19 +10,24 @@
                             <div class="boxForm">
                                 <label for="titulo" class="">Título :</label>
                                 <input class="input-title" type="text" name="title" id="titulo" >
+                                <div class="small text-danger">
+                                    <%= locals.errores && errores.title ? errores.title.msg : null %>
+                                </div>
 
                             </div>
 
                             <div class="boxForm">
                                 <label for="descripcion" class="">Descripción:</label>
                                 <input class="input-form" type="text" name="description" id="descripcion" >
-
+                                <div class="small text-danger">
+                                    <%= locals.errores && errores.description ? errores.description.msg : null %>
+                                </div>
                             </div>
 
                             <div class="boxForm">
                                 <label for="category">Categorías:</label>
                                 <select name="category" id="category" value="Categorias">
-                                    <option value=0></option>
+                                    <option value=0>Seleccione una categoría</option>
                                     <option value=1>Mates</option>
                                     <option value=2>Yerbas</option>
                                     <option value=3>Bolsos Materos</option>
@@ -35,6 +40,9 @@
                             <div class="boxForm">
                                 <label for="valor" class="">Precio : </label>
                                 <input class="input-price" type="text" name="price" >
+                                <div class="small text-danger">
+                                    <%= locals.errores && errores.price ? errores.price.msg : null %>
+                                </div>
 
                             </div>
 
