--- a/sitio/public/stylesheets/registro.css
+++ b/sitio/public/stylesheets/registro.css
@@ -1,4 +1,5 @@
-.registro{background: radial-gradient(circle, rgba(47,47,47,1) 0%, rgba(0,0,0,1) 99%);
+.registro{background: rgb(106,106,106);
+    background: radial-gradient(circle, rgba(106,106,106,1) 0%, rgba(9,8,8,1) 0%, rgba(36,36,36,1) 45%, rgba(155,155,158,1) 100%, rgba(158,158,158,1) 100%, rgba(101,101,103,1) 100%);
 }
 .registro main h2{
     color: white;
