--- a/sitio/views/editProducts.ejs
+++ b/sitio/views/editProducts.ejs
@@ -22,7 +22,7 @@
 
                     <div class="boxForm">
                         <label for="category">Categorías:</label>
-                        <select name="category" id="category" value=Categorias>
+                        <select name="categories_id" id="category" value=Categorias>
                             <option value="1" <%= product.categories_id == "1" ? 'selected' : null %>>Mates</option>
                             <option value="2" <%= product.categories_id == "2" ? 'selected' : null %>>Yerbas</option>
                             <option value="3" <%= product.categories_id == "3" ? 'selected' : null %>>Bolsos Materos</option>
