--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -49,8 +49,8 @@
 
             <article class="producto">
               <div class="imagen">
-                <a href="/products/detalleDeProducto/<%= producto.id %> "><img class="rounded-circle" src="/images/<%= producto.image %> "
-                    width="200px"> </a>
+                <a href="/products/detalleDeProducto/<%= producto.id %> "><img class="rounded-circle"
+                    src="/images/<%= producto.image %> " width="200px"> </a>
               </div>
               <div class="resumen">
                 <h4 class="descripcion">
@@ -69,7 +69,7 @@
             <p>Dejanos tu email y te enviamos un cupón de 10%OFF para que lo uses en tu primer compra!!</p>
           </div>
           <div class="form">
-            <input type="text" name="FNAME" placeholder="Nombre" >
+            <input type="text" name="FNAME" placeholder="Nombre">
             <input type="email" name="EMAIL" placeholder="Email" autocomplete="off">
             <input type="submit" value="Subscribirse">
           </div>
