--- a/sitio/views/partials/header.ejs
+++ b/sitio/views/partials/header.ejs
@@ -15,19 +15,19 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/login">login</a>
+                      <a class="nav-link active" aria-current="page" href="/users/login">login</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">registro</a>
+                      <a class="nav-link active" aria-current="page" href="/users/registro">registro</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/">tienda</a>
+                      <a class="nav-link active" aria-current="page" href="/products/productos">tienda</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">contacto</a>
+                      <a class="nav-link active" aria-current="page" href="/contacto">contacto</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">nosotros</a>
+                      <a class="nav-link active" aria-current="page" href="/nosotros">nosotros</a>
                     </li>
                   </ul>
                   
