--- a/sitio/public/stylesheets/home.css
+++ b/sitio/public/stylesheets/home.css
@@ -1,10 +1,10 @@
-
 .home {
     background: rgb(47,47,47);
     background: radial-gradient(circle, rgba(47,47,47,1) 0%, rgba(0,0,0,1) 99%);
     max-width: 1140px;
     margin: 0 auto;
     width: 100%;
+    
 }
 
 .home h2{
@@ -145,4 +145,13 @@ display: block;
 .home .producto .imagen img{
   width: 270px;
 }
+
+.home .productos .resumen .precio{
+    color: wheat;
+}
+.home .productos .resumen .descripcion{
+    color: wheat;
+}
+
+
 }
