--- a/sitio/views/partials/footer.ejs
+++ b/sitio/views/partials/footer.ejs
@@ -49,10 +49,10 @@
                         Categorías
                     </h6>
                     <p>
-                        <a href="/products/categories?category=mates" class="text-reset">Mates</a>
+                        <a href="products/search?search=mate" class="text-reset">Mates</a>
                     </p>
                     <p>
-                        <a href="/products/categories?category=bolsos" class="text-reset">Bolsos</a>
+                        <a href="/products/search?search=bolso" class="text-reset">Bolsos</a>
                     </p>
                     <p>
                         <a href="#!" class="text-reset"></a>
