correccion fecha-footer

--- a/sitio/views/partials/footer.ejs
+++ b/sitio/views/partials/footer.ejs
@@ -49,7 +49,7 @@
                         Categorías
                     </h6>
                     <p>
-                        <a href="products/search?search=mate" class="text-reset">Mates</a>
+                        <a href="/products/search?search=mate" class="text-reset">Mates</a>
                     </p>
                     <p>
                         <a href="/products/search?search=bolso" class="text-reset">Bolsos</a>
