--- a/sitio/views/profile.ejs
+++ b/sitio/views/profile.ejs
@@ -19,8 +19,7 @@
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">editar contraseña</label>
-              <input type="password" name= "password" class="form-control" id="exampleInputPassword1"
-              >
+              <input type="password" name= "password" class="form-control" id="exampleInputPassword1">
                
 
             </div>
