--- a/sitio/views/index.ejs
+++ b/sitio/views/index.ejs
@@ -39,7 +39,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <h2> elegí, pagá y recibí tu pedido sin moverte de tu casa.</h2>
+        <h2 class="animate__animated animate__backInLeft animate__delay-2s"> elegí, pagá y recibí tu pedido sin moverte de tu casa.</h2>
 
 
         <!--  Productos   -->
