--- a/sitio/views/profile.ejs
+++ b/sitio/views/profile.ejs
@@ -6,7 +6,7 @@
         <%- include('./partials/header.ejs') %>
     
                 
-        <h1>Bienvenid@ a tu perfil  <h2><%=locals.user.nameId  %></h2>  </h1>
+        <h1>Bienvenid@ a tu perfil  <h2 class="animate__animated animate__backInDown animate__delay-1s"><%=locals.user.nameId  %></h2>  </h1>
         <div class="avatar">
         <img class= "rounded-circle" src="/images/<%= user.image %> " alt="" width="200px">
       </div>
