--- a/sitio/views/partials/scripts.ejs
+++ b/sitio/views/partials/scripts.ejs
@@ -2,3 +2,6 @@
 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/b068d6698a.js" crossorigin="anonymous"></script>
+<script src="sweetalert2.all.min.js">
+
+    
